--- a/index.html
+++ b/index.html
@@ -2,10 +2,21 @@
 <html>
 <head>
   <title>Rock, Paper, Scissor</title>
+  <script src="script.js" defer></script>
+  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8"/>
 </head>
 <body>
-  <script src="script.js">
-  </script>
+  <div class="button-container">
+    <button class="rock">Rock</button>
+    <button class="paper">Paper</button>
+    <button class="scissor">Scissor</button>
+  </div>
+  <div class="score-grid">
+    <p>Your Score:</p>
+    <p>Computer's Score:</p>
+    <div class="player-score">0</div>
+    <div class="computer-score">0</div>
+  </div>
 </body>
 </html>
