--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <meta charset="UTF-8"/>
 </head>
 <body>
-  <div class="button-container">
+  <div class="button-grid">
     <button class="rock">Rock</button>
     <button class="paper">Paper</button>
     <button class="scissor">Scissor</button>
+    <p class="winner">Make your choice</p>
   </div>
   <div class="score-grid">
     <p>Your Score:</p>
