improved buttons design

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <button class="rock">Rock</button>
     <button class="paper">Paper</button>
     <button class="scissor">Scissor</button>
+  </div>
+  <div class="result-grid">
     <p class="winner">Make your choice</p>
   </div>
   <div class="score-grid">
