--- a/index.html
+++ b/index.html
@@ -7,10 +7,22 @@
   <meta charset="UTF-8"/>
 </head>
 <body>
+  <header>
+    <h1>Rock Paper Scissor</h1>
+  </header>
   <div class="button-grid">
-    <button class="rock">Rock</button>
+    <!-- <button class="rock">Rock</button>
     <button class="paper">Paper</button>
-    <button class="scissor">Scissor</button>
+    <button class="scissor">Scissor</button> -->
+    <div class="grid-item">
+      <img class="rock" src="imgs/rock.png">
+    </div>
+    <div class="grid-item">
+      <img class="paper" src="imgs/paper.png">
+    </div>
+    <div class="grid-item">
+      <img class="scissor" src="imgs/scissor.png">
+    </div>
   </div>
   <div class="result-grid">
     <p class="winner">Make your choice</p>
