now showing player and computer choices

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   </header>
   <div class="button-grid">
     <div class="grid-item">
-      <img class="rock" src="imgs/rock.png">
+      <img class="rock" src="imgs/rock.png" alt="rock">
     </div>
     <div class="grid-item">
-      <img class="paper" src="imgs/paper.png">
+      <img class="paper" src="imgs/paper.png" alt="paper">
     </div>
     <div class="grid-item">
-      <img class="scissor" src="imgs/scissor.png">
+      <img class="scissor" src="imgs/scissor.png" alt="scissor">
     </div>
   </div>
   <div class="result-grid">
@@ -29,6 +29,12 @@
     <p>Computer's Score:</p>
     <div class="player-score">0</div>
     <div class="computer-score">0</div>
+    <div class="grid-item" id="player-choice">
+      
+    </div>
+    <div class="grid-item" id="computer-choice">
+      
+    </div>
   </div>
 </body>
 </html>
